# notebook-coach

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: tests.yml
agents/: openai.yaml
docs/: demo-script.md  devpost-checklist.md
docs/superpowers/plans/: 2026-07-15-notebook-coach.md
docs/superpowers/specs/: 2026-07-15-notebook-coach-design.md
examples/transformer_attention_buggy/: baseline.json  challenge.ipynb  evaluation.md  report.md  verification.md
examples/transformer_attention_buggy/.notebook-coach/: execution-ledger.json  report-state.json  verification-state.json
references/: contracts.md
samples/: transformer_attention_buggy.ipynb
scripts/: install.sh
src/notebook_coach/: __init__.py  cli.py  contracts.py  execution.py  execution_worker.py  notebooks.py  render.py  revisions.py  risk.py  runs.py  sanitize.py  scoring.py  workflows.py
tests/: conftest.py  test_cli.py  test_contracts.py  test_diagnosis_workflow.py  test_docs.py  test_execution.py  test_install_script.py  test_notebooks.py  test_package.py  test_render.py  test_revisions.py  test_risk.py  test_runs.py  test_sample.py  test_sanitize.py  test_scoring.py  test_skill_contract.py  test_verification.py
tests/fixtures/: diagnosis-assessment.json  verification-assessment.json
