[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-coach"
version = "0.1.0"
description = "Evidence-based Codex coaching for Jupyter notebooks"
requires-python = ">=3.11"
dependencies = [
  "nbformat>=5.10,<6",
  "nbclient>=0.10,<1",
  "ipykernel>=6.29,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
notebook-coach-tool = "notebook_coach.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
